--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Frandenilson Antony (iabyantony88@gmail.com)",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "yarn ts-node-dev ./src/index.ts"
+  },
   "dependencies": {
     "express": "^4.18.2"
   },
