--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start": "yarn ts-node-dev ./src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/http-status-codes": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
